# Lidar-Studio-SDK

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  SamplePluginInterface.cpp  SamplePluginInterface.h
include/: SDKPluginInterface.h  i_plugin_sdk.h  lcplugin_def.h
lib/: LcPluginsSDK.lib
